WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134028
[GTK] XPathNSResolver should be exposed as an interface instead of as a class
https://bugs.webkit.org/show_bug.cgi?id=134028
Summary
[GTK] XPathNSResolver should be exposed as an interface instead of as a class
Carlos Garcia Campos
Reported
2014-06-18 06:25:19 PDT
Similar to the NodeFilter case (see
bug #93002
), but in this case the XPathNSResolver interface can be implemented internally or by the application. So we need to expose it as an interface, but we also need to wrap NativeXPathNSResolver internally to provide a default implementation for methods that create a XPathNSResolver.
Attachments
Patch
(35.91 KB, patch)
2014-06-24 05:54 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Updated to build on current git master
(35.83 KB, patch)
2014-06-25 04:52 PDT
,
Carlos Garcia Campos
gustavo
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-06-24 05:54:41 PDT
Created
attachment 233696
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-06-25 04:52:20 PDT
Created
attachment 233804
[details]
Updated to build on current git master
Gustavo Noronha (kov)
Comment 3
2014-07-01 09:03:33 PDT
Comment on
attachment 233804
[details]
Updated to build on current git master LGTM
Carlos Garcia Campos
Comment 4
2014-07-02 00:04:58 PDT
Committed
r170700
: <
http://trac.webkit.org/changeset/170700
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug